--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -41,6 +41,7 @@ COPY README.md /opt/app-root/src/Desktop/
 COPY run-editor.sh /opt/app-root/src/Desktop/
 COPY run-distrib-test.sh /opt/app-root/src/Desktop/
 COPY curl-format.txt /
+COPY demoTestPlan.jmx $JMETER_HOME
 RUN chmod +x /entrypoint.sh
 
 WORKDIR $JMETER_HOME
